tests/run-pass/hide_stdout.rs
// compile-flags: -Zmiri-drop-stdout-stderr

fn main() {
    println!("cake");
}
